# QtCpp-PythonConsole

./: CMakeLists.txt  CallTips.cpp  CallTips.h  MainWindow.cpp  MainWindow.h  PythonConsole.cpp  PythonConsole.h  PythonSyntaxHighlighter.cpp  PythonSyntaxHighlighter.h  README.md  TextEdit.h  Utility.cmake  main.cpp  pyutil.cpp
PythonConsole/: CallTips.cpp
deprecated/old1/: called_from_cpp.py  main.cpp  setup.py  toymath.cpp  toymath.py
deprecated/old2/: CallTips.cpp  CallTips.h
mymod/: CMakeLists.txt  main.cpp
